<resources>
    <string name="app_name">Global Service</string>
    <string name="tvTitulo">Login</string>
    <string name="etUsuario">Usuario</string>
    <string name="etContraseña">Contraseña</string>
    <string name="tvOlvidar">Restaurar contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnSalir">Salir</string>
    <string name="btnRegistrarUser">Registrar Usuario</string>
    <string name="btnMostrarUser">Mostrar</string>
    <string name="btnEditarUser">Editar</string>
    <string name="btnEliminarUser">Eliminar</string>
    <string name="tvTituloRegisUser">Ingrese los datos solicitados</string>
    <string name="etIdUser">ID</string>
    <string name="etNombreUser">NOMBRE</string>
    <string name="etApellidoUser">APELLIDO</string>
    <string name="etRurUser">RUT</string>
    <string name="etCorreoUser">CORREO</string>
    <string name="etContraseñaUser">CONTRASEÑA</string>
    <string name="etReptContraseñaUser">REPETIR CONTRASEÑA</string>
    <string name="etPaisUser">PAIS</string>
</resources>
